Add downloadSchemasTask to build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ cache:
 variables:
   IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
   LATEST_IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
+  SCHEMA_REGISTRY_URL: http://35.246.221.102:9099
 
 stages:
   - build
