--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build:
   stage: build
   script:
     - ls build/libs
+    - ./gradlew downloadSchemasTask
     - ./gradlew test
     - ./gradlew bootJar
 
@@ -36,8 +37,8 @@ dockerize:
     - docker build --cache-from $LATEST_IMAGE_TAG -t $IMAGE_TAG -t $LATEST_IMAGE_TAG --build-arg PROFILE=prod --build-arg SCHEMA_REGISTRY_USERNAME=$SCHEMA_REGISTRY_USERNAME --build-arg SCHEMA_REGISTRY_PASSWORD=$SCHEMA_REGISTRY_PASSWORD .
     - docker push $IMAGE_TAG
     - docker push $LATEST_IMAGE_TAG
-#  only:
-#    - master
+  only:
+    - master
 
 deploy:
   image: google/cloud-sdk:293.0.0
