--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,17 @@ management:
       exposure:
         include: health, prometheus
 spring:
+  jmx:
+    enabled: true
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: pc-mint:9092
     properties:
-      schema.registry.url: http://localhost:9099
+      schema.registry.url: http://pc-mint:9099
       specific.protobuf.value.type: com.pw.tms.TextMessageSentProto
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
-      group-id: notification-service
+      group-id: ${GROUP_ID}
   security:
     oauth2:
       resourceserver:
